--- a/index-ar.html
+++ b/index-ar.html
@@ -260,7 +260,7 @@
             المدى.
             أنا ملتزم بـ التطور المستمر وتقديم أعمال ترتقي إلى أعلى مستويات الجودة، مع ربط كل مشروع برسالة أعمق تهدف إلى
             إحداث أثر إيجابي وترك بصمة خيّرة. كما ألتزم أن يكون عملي دومًا منسجمًا مع القيم والمبادئ الإسلامية، دون أي
-            تعارض مع ديني، مع الحفاظ على الاحترافية العالية وبأقصى درجات الاحترافية.</p>
+            تعارض مع ديني، مع الحفاظ على الاحترافية العالية.</p>
         </div>
       </div>
     </section>
@@ -478,7 +478,7 @@
       <div class="content">
 
         <div class="biography">
-          <p>منذ أن اكتشفت الحواسيب لأول مرة في سن التاسعة، انجذبت بشدة إلى التصميم وفضوليت لمعرفة كيفية إنشاء واجهات
+          <p>منذ أن اكتشفت الحواسيب لأول مرة في سن التاسعة، انجذبت بشدة إلى التصميم وفضولي لمعرفة كيفية إنشاء واجهات
             المستخدم. هذا الفضول تحول إلى شغف طويل الأمد ببناء تجارب رقمية متميزة.
 
             أملك خبرة تزيد عن 10 سنوات في المجال البصري و5 سنوات كمصمم متخصص في UX/UI، مع خبرة واسعة في تصميم الويب
