--- a/index-ar.html
+++ b/index-ar.html
@@ -504,7 +504,7 @@
             </div>
             <br>
             <div class="status">
-              <h3><span> &nbsp;&nbsp;حتى نهاية سبتمبر&nbsp;&nbsp;</span> </h3>
+              <h3><span> &nbsp;&nbsp;بحلول نهاية سبتمبر &nbsp;&nbsp;</span> </h3>
             </div>
 
             <div class="interest">
