--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
             </div>
 
             <div class="status">
-              <h3> until the end september</h3>
+              <h3> by the end of September</h3>
             </div>
 
             <div class="interest">
